public description => description
perl -ibak -pe 's/publicdescription/description/gi' `grep -ril 'publicdescription' . | grep -v .svn`
rake makemo
svn diff | vim -R -

--- a/of/po/openfoundry.pot
+++ b/of/po/openfoundry.pot
@@ -310,7 +310,7 @@ msgid "Project|Rationale"
 msgstr ""
 
 #: app/models/project.rb:-
-msgid "Project|Publicdescription"
+msgid "Project|description"
 msgstr ""
 
 #: app/models/project.rb:-
