--- a/trunk/of/po/openfoundry.pot
+++ b/trunk/of/po/openfoundry.pot
@@ -310,7 +310,7 @@ msgid "Project|Rationale"
 msgstr ""
 
 #: app/models/project.rb:-
-msgid "Project|Publicdescription"
+msgid "Project|description"
 msgstr ""
 
 #: app/models/project.rb:-
